# python-project-lvl4

./: .coveragerc  .gitignore  .travis.yml  Makefile  Procfile  README.md  manage.py  pyproject.toml  release.sh  requirements.txt
task_manager/: admin.py  fields.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/management/commands/: initadmin.py  initstatuses.py
task_manager/migrations/: 0001_initial.py  0002_auto_20200815_1622.py  0003_auto_20200815_1923.py  0004_auto_20200912_1330.py
task_manager/static/task_manager/: editTask.js  filter-form-style.css  searchTasks.js  tasks.js
task_manager/task_manager/: settings.py  urls.py  wsgi.py
task_manager/task_manager/templates/task_manager/: base.html
task_manager/templates/django_registration/: registration_complete.html  registration_disallowed.html  registration_form.html
task_manager/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
task_manager/templates/task_manager/: base.html  create_status.html  create_task.html  delete_status.html  delete_task.html  edit_status.html  index.html  profile.html  statuses.html  task_detail.html  task_details.html  tasks.html
task_manager/tests/: test_forms.py  test_models.py  test_views.py
