[tool.poetry]
name = "sdemikhov_task_manager"
version = "0.2.0"
description = ""
authors = ["Sergey Demikhov <demikhov.sergey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
django-bootstrap4 = "^2.2.0"
rollbar = "^0.15.0"
python-dotenv = "^0.14.0"
psycopg2 = "^2.8.5"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^5.1.0"
django-registration = "^3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
